@@ -46,7 +46,9 @@ Version SVN HEAD (?)
   * Added multi-row selection support on instruments list view.
   * windows, 32-bit: fixed crashes by making sure the stack in sub
     threads is 16-byte aligned
-
+  * windows: look for the data directory in the parent of the dll
+    directory, if the dll directory is called "32" or "64"
+  
 Version 1.0.0 (2015-07-17)
 
   * minor fix in configure for cross-compiling
